--- a/src/assets/homepage.scss
+++ b/src/assets/homepage.scss
@@ -1,12 +1,109 @@
-#homepage-header{
-    width:100%; 
-    height:500px;
+// 廣告 Modal
+#advertisementModalCloseModal{
+    right: 15px;
+    top: 15px;
+    cursor: pointer;
+}
+
+#advertisementModalImg{
+    vertical-align: bottom;
+}
+
+#advertisementModalBody{
+    background-image: url('~@/assets/images/advertisement/openingDiscount.gif');
+    background-size: cover;
+}
+
+// header
+#homepage-header {
+    width: 100%;
+    height: 500px;
     background-image: url('~@/assets/images/others/pexels-thiea-alhoz-5604815.jpg');
     background-size: cover;
 }
 
-#homepage-header-content{
-    width:100%; 
-    height:500px;
-    background-color: rgb(0,0,0,0.5);
+#homepage-header-content {
+    width: 100%;
+    height: 500px;
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+// 理念介紹1
+#introduction1-box{
+    margin-top: 150px;
+    width: 75%;
+}
+
+#introduction1-img{
+    width: 75%;
+    height: 200px;
+
+    background-image: url('~@/assets/images/others/pexels-natalia-kolotvina-10044046.jpg');
+    background-size: cover;
+    background-position: center;
+    
+    top:0;
+    left:50%;
+    transform: translate(-50%, -50%)
+}
+
+#introduction1-text{
+    margin-top: 130px;
+    margin-bottom: 30px;
+}
+
+// 理念介紹2
+#introduction2-box{
+    margin-top: 150px;
+    width: 75%;
+}
+
+#introduction2-img{
+    width: 75%;
+    height: 200px;
+
+    background-image: url('~@/assets/images/others/pexels-andrea-piacquadio-821054.jpg');
+    background-size: cover;
+    background-position: center;
+    
+    top:0;
+    left:50%;
+    transform: translate(-50%, -50%)
+}
+
+#introduction2-text{
+    margin-top: 130px;
+    margin-bottom: 30px;
+}
+
+@include media-breakpoint-up(lg) {
+    // 理念介紹1
+    #introduction1-img{
+        width: 50%;
+        height: 300px;
+        
+        left:0;
+        transform: translate(-35%, -25%)
+    }
+
+    #introduction1-text{
+        margin-top: 50px;
+        margin-bottom: 30px;
+        margin-right: 15%;
+    }
+
+    // 理念介紹2
+    #introduction2-img{
+        width: 50%;
+        height: 300px;
+        
+        left:100%;
+        transform: translate(-65%,-25%)
+    }
+
+    #introduction2-text{
+        margin-top: 50px;
+        margin-bottom: 30px;
+        margin-left: 15%;
+    }
 }
