layout and function completed

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -28,6 +28,8 @@
 // 8. Add additional custom code here
 @import '~bootstrap/scss/bootstrap.scss';
 
-@import './homepage.scss';
 @import '~bootstrap-icons/font/bootstrap-icons.css';
+@import './homepage.scss';
 @import './aboutUs.scss';
+@import './productsList.scss';
+@import './loadingPage.scss';
