--- a/src/assets/homepage.scss
+++ b/src/assets/homepage.scss
@@ -28,6 +28,15 @@
     background-color: rgb(0, 0, 0, 0.5);
 }
 
+//消費方式
+.expand-target {
+  transition-property: all;
+  transition-duration: 1s;
+}
+
+.expanded {
+  transform: scale(1.3);
+}
 // 理念介紹1
 #introduction1-box{
     margin-top: 150px;
