add reservationPage and header image animation

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -31,5 +31,7 @@
 @import '~bootstrap-icons/font/bootstrap-icons.css';
 @import './homepage.scss';
 @import './aboutUs.scss';
-@import './productsList.scss';
+@import './cardAndButton.scss';
 @import './loadingPage.scss';
+@import './productDetail.scss';
+@import './orderModal.scss';
