--- a/src/assets/cardAndButton.scss
+++ b/src/assets/cardAndButton.scss
@@ -7,10 +7,19 @@
     cursor: pointer;
 }
 
-// 
+// 圖片放大
 .img-expand img{
     transition: all, 1s;
 }
 .img-expand:hover img{
     transform: scale(1.3);
+}
+
+// 卡片放大
+.card-expand{
+    transition: all, 1s;
+}
+
+.card-expand:hover{
+    transform: scale(1.1);
 }
