--- a/src/assets/homepage.scss
+++ b/src/assets/homepage.scss
@@ -1,116 +1,130 @@
 // 廣告 Modal
-#advertisementModalCloseModal{
+#advertisementModalCloseModal {
     right: 15px;
     top: 15px;
     cursor: pointer;
 }
 
-#advertisementModalImg{
+#advertisementModalImg {
     vertical-align: bottom;
 }
 
-#advertisementModalBody{
-    background-image: url('~@/assets/images/advertisement/openingDiscount.gif');
+#advertisementModalBody {
+    background-image: url('~@/assets/images/advertisement/openingDiscount.jpg');
     background-size: cover;
 }
 
 // header
-#homepage-header {
-    width: 100%;
-    height: 500px;
-    background-image: url('~@/assets/images/others/pexels-thiea-alhoz-5604815.jpg');
-    background-size: cover;
-}
-
 #homepage-header-content {
     width: 100%;
     height: 500px;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgb(255, 255, 255, 0.3);
 }
 
-//消費方式
-.expand-target {
-  transition-property: all;
-  transition-duration: 1s;
+#homePageHeader {
+    transition: all 2.5s;
 }
 
-.expanded {
-  transform: scale(1.3);
+#homepage-header-image{
+    height:100%;
+    width: auto;
+ }
+
+.homepage-header-image-expand{
+    transform: scale(1.5);
 }
+
 // 理念介紹1
-#introduction1-box{
+#introduction1-box {
     margin-top: 150px;
     width: 75%;
 }
 
-#introduction1-img{
+#introduction1-img {
     width: 75%;
     height: 200px;
 
     background-image: url('~@/assets/images/others/pexels-natalia-kolotvina-10044046.jpg');
     background-size: cover;
     background-position: center;
-    
-    top:0;
-    left:50%;
+
+    top: 0;
+    left: 50%;
     transform: translate(-50%, -50%)
 }
 
-#introduction1-text{
+#introduction1-text {
     margin-top: 130px;
     margin-bottom: 30px;
 }
 
 // 理念介紹2
-#introduction2-box{
+#introduction2-box {
     margin-top: 150px;
     width: 75%;
 }
 
-#introduction2-img{
+#introduction2-img {
     width: 75%;
     height: 200px;
 
     background-image: url('~@/assets/images/others/pexels-andrea-piacquadio-821054.jpg');
     background-size: cover;
     background-position: center;
-    
-    top:0;
-    left:50%;
+
+    top: 0;
+    left: 50%;
     transform: translate(-50%, -50%)
 }
 
-#introduction2-text{
+#introduction2-text {
     margin-top: 130px;
     margin-bottom: 30px;
 }
 
+@include media-breakpoint-up(md) {
+    //消費方式
+    .expand-target {
+        transition-property: all;
+        transition-duration: 1s;
+    }
+
+    .expanded {
+        transform: scale(1.3);
+    }
+
+    #homepage-header-image{
+       height:700px;
+    }
+}
+
 @include media-breakpoint-up(lg) {
+
     // 理念介紹1
-    #introduction1-img{
+    #introduction1-img {
         width: 50%;
         height: 300px;
-        
-        left:0;
+
+        left: 0;
         transform: translate(-35%, -25%)
     }
 
-    #introduction1-text{
+    #introduction1-text {
         margin-top: 50px;
         margin-bottom: 30px;
         margin-right: 15%;
     }
 
     // 理念介紹2
-    #introduction2-img{
+    #introduction2-img {
         width: 50%;
         height: 300px;
-        
-        left:100%;
-        transform: translate(-65%,-25%)
+
+        left: 100%;
+        transform: translate(-65%, -25%)
     }
 
-    #introduction2-text{
+    #introduction2-text {
         margin-top: 50px;
         margin-bottom: 30px;
         margin-left: 15%;
