--- a/src/assets/loadingPage.scss
+++ b/src/assets/loadingPage.scss
@@ -2,3 +2,8 @@
     position: fixed;
     background-color: rgb(0,0,0,0.5);
 }
+
+#spinnerloading {
+    position: fixed;
+    background-color: rgb(0,0,0,0.5);
+}
