--- a/src/assets/orderModal.scss
+++ b/src/assets/orderModal.scss
@@ -7,3 +7,13 @@
         font-size: 15rem;
     }
 }
+
+// 消除input number 箭頭
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+  }
