self code review

--- a/src/assets/aboutUs.scss
+++ b/src/assets/aboutUs.scss
@@ -15,3 +15,19 @@
     background-size: cover;
     background-position: center;
 }
+
+.about-img-sm{
+    height:450px;
+}
+
+.about-img-lg{
+    height:250px
+}
+
+.about-text-lg {
+    height:550px
+}
+
+.about-text-sm {
+    height: 300px;
+}
