--- a/src/assets/homepage.scss
+++ b/src/assets/homepage.scss
@@ -25,13 +25,40 @@
     transition: all 2.5s;
 }
 
-#homepage-header-image{
+.homepage-header-image{
     height:100%;
     width: auto;
- }
+    opacity: 0;
+    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 
-.homepage-header-image-expand{
-    transform: scale(1.5);
+    animation: carousel 15s infinite linear;
+}
+
+@include media-breakpoint-up(md) {
+    .homepage-header-image{
+       height:700px;
+    }
+}
+
+#homePageHeader .homepage-header-image:nth-child(2) {
+    animation-delay: 5s;
+    background-color: blue;
+}
+
+#homePageHeader .homepage-header-image:nth-child(3) {
+    animation-delay: 10s;
+    background-color: red;
+}
+
+@keyframes carousel {
+    0%{opacity: 0;}
+    10%{opacity: 0.98;}
+    23.3%{opacity: 0.98;}
+    33.3%{opacity: 0;}
+    100%{opacity: 0;}
 }
 
 // 理念介紹1
@@ -82,19 +109,30 @@
     margin-bottom: 30px;
 }
 
+.expand-target img {
+    height:150px
+}
+
 @include media-breakpoint-up(md) {
     //消費方式
     .expand-target {
-        transition-property: all;
-        transition-duration: 1s;
+        animation: expand infinite 9s;
     }
 
-    .expanded {
-        transform: scale(1.3);
+    .expand-target:nth-child(2) {
+        animation-delay: 3s;
     }
 
-    #homepage-header-image{
-       height:700px;
+    .expand-target:nth-child(3) {
+        animation-delay: 6s;
+    }
+
+    @keyframes expand {
+        0%{transform: scale(1);}
+        10%{transform: scale(1.2);}
+        23.3%{transform: scale(1.2);}
+        33.3%{transform: scale(1);}
+        100%{transform: scale(1);}
     }
 }
 
