--- a/src/assets/loadingPage.scss
+++ b/src/assets/loadingPage.scss
@@ -1,9 +1,27 @@
 #loading {
+    width:100vw; 
+    height:100vh; 
+    z-index:10000000;
+
     position: fixed;
     background-color: rgb(0,0,0,0.5);
 }
 
 #spinnerloading {
+    width:100vw;
+    height:100vh;
+    z-index:10000005;
+
     position: fixed;
     background-color: rgb(0,0,0,0.5);
+}
+
+.loading-page-logo {
+    width:300px; 
+    height:300px;
+}
+
+.spinner-border {
+    width: 50px; 
+    height: 50px;
 }
